Style blobs for mobile, fix overflow

--- a/style.css
+++ b/style.css
@@ -521,6 +521,7 @@ a .avatar:hover {
     justify-content: center;
     align-items: center;
     background: -webkit-linear-gradient(90deg, #3e3c7a, #5d5ab9, #8660c4);
+    overflow: hidden;
 }
 
 .two-container {
@@ -672,7 +673,7 @@ a .avatar:hover {
 .blob {
     position: absolute;
     opacity: 0;
-    animation: fadein 800ms 2100ms cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
+    animation: fadein 800ms 2600ms cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
     z-index: 1;
     height: 30rem;
 }
@@ -801,7 +802,7 @@ a .avatar:hover {
     background: -webkit-linear-gradient(90deg, #8660c4, #ffffff00);
     height: 12em;
     position: absolute;
-    top: calc(-12em + 1px);
+    bottom: 0;
     left: 0;
     width: 100%;
     overflow: hidden;
@@ -897,5 +898,23 @@ a .avatar:hover {
     }
     .quote-content {
         padding: 64px 1em;
+    }
+    .hero {
+        padding: 4em 0 0;
+    }
+    .hero-layout {
+        margin-top: 2rem;
+    }
+    .blob:nth-of-type(1) {
+        left: -20%;
+        bottom: 0;
+    }
+    .blob:nth-of-type(2) {
+        left: -10%;
+        bottom: 10%;
+    }
+    .blob:nth-of-type(3) {
+        right: -30%;
+        top: 0;
     }
 }
